BAP-17717: Fix align of Use default checkbox (Recent Calls) - change label top offset - add control-group bottom offset

--- a/src/Oro/Bundle/UIBundle/Resources/public/css/scss/oro/form/form.scss
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/scss/oro/form/form.scss
@@ -324,7 +324,8 @@ input[type="color"],
     max-width: 800px;
 }
 
-.form-container {
+.form-container,
+.form-horizontal {
     .control-group {
         &:not(:last-of-type) {
             margin: 0 0 $form-container-control-row-space;
